syntax = "proto3";
option go_package = "github.com/kralicky/totem_test";
package totem_test;
import "google/protobuf/empty.proto";
import "github.com/kralicky/totem/totem.proto";

service Test {
  rpc TestStream(stream totem.RPC) returns (stream totem.RPC);
}

service Increment {
  rpc Inc(Number) returns (Number);
}

service Decrement {
  rpc Dec(Number) returns (Number);
}

service Hash {
  rpc Hash(String) returns (String);
}

service AddSub {
  rpc Add(Operands) returns (Number);
  rpc Sub(Operands) returns (Number);
}

service Error {
  rpc Error(ErrorRequest) returns (google.protobuf.Empty);
}

message ErrorRequest {
  bool ReturnError = 1;
}

message Number {
  int64 Value = 1;
}

message String {
  string Str = 1;
}

message Operands {
  int32 A = 1;
  int32 B = 2;
}
